# LiteHouse

./: README.md
.cursor/rules/: shadcn.mdc
backend/: pyproject.toml
backend/litehouse/: __init__.py  dependencies.py  main.py  models.py  session_manager.py
backend/litehouse/routers/: query.py  schema.py  sessions.py  tables.py  upload.py
backend/test_data/: sample.csv  sample.parquet
backend/tests/: __init__.py  conftest.py  test_models.py
docs/: prd.md  system_design.md  ui_implementation_plan.md  ux_structure_plan.md
frontend/: HYDRATION_FIX.md  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: dashboard.tsx
frontend/src/components/dashboard/: file-upload-zone.tsx  footer.tsx  header.tsx  metadata-panel.tsx  results-display.tsx  schema-explorer.tsx  sql-editor.tsx
frontend/src/lib/: api.ts
